kubernetes/commons.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-non-www
  namespace: bernardoforcillo-com
spec:
  redirectRegex:
    regex: "^https://www\\.(.*)"
    replacement: "https://$1"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-to-https
  namespace: bernardoforcillo-com
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security
  namespace: bernardoforcillo-com
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    referrerPolicy: "strict-origin-when-cross-origin"
    permissionsPolicy: "camera=(), microphone=(), geolocation=(), payment=()"
    customResponseHeaders:
      X-Permitted-Cross-Domain-Policies: "none"
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: bernardoforcillo-com
spec:
  rateLimit:
    average: 10000
    period: 1s
    burst: 200
    sourceCriterion:
      ipStrategy:
        depth: 1
