kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
  namespace: bernardoforcillo-com
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bernardoforcillo-com
      tier: personal-website
  template:
    metadata:
      labels:
        app: bernardoforcillo-com
        tier: personal-website
    spec:
      containers:
        - name: bernardoforcillo-com
          image: bernardoforcillo/bernardoforcillo-com
          resources:
            limits:
              memory: '128Mi'
              cpu: '50m'
            requests:
              memory: '64Mi'
              cpu: '10m'
          tty: true
          imagePullPolicy: Always
          ports:
            - containerPort: 80
